# dataharpoon

./: .gitignore  Cargo.toml  README.md
example/: .data_harpoon_config.toml  README.md  data_harpoon.toml  org.json  user.csv
src/: agent.rs  cli.rs  config.rs  engine.rs  infra.rs  main.rs  repo.rs
src/agent/: agent.rs  agent_error.rs  agent_response.rs  query_inference_agent.rs  response.rs  state.rs
src/cli/: cli.rs  helper.rs  input_validator.rs  mcp_server.rs  repl.rs  ui.rs
src/config/: config.rs  mcp_server_config.rs
src/data/: prompt.md
src/engine/: call_mcp_function.rs  context.rs  information_schema.rs  mcp_tool_caller.rs  udf.rs
src/engine/information_schema/: information_schema_provider.rs  mcp_servers_table_provider.rs  mcp_tools_table_provider.rs
src/engine/udf/: call_mcp_function.rs  exec_mcp_function.rs
src/infra/: mcp_client.rs  rig_agent.rs  rig_agent_mock.rs
src/infra/rig_mock_responses/example_files/: 1_describe_user.txt  2_describe_org.txt  3_preview_user.txt  4_preview_org.txt  5_attempt_completion.txt
src/infra/rig_mock_responses/san_francisco_time/: 1_input_schema.txt  2_exec_mcp.txt  3_attempt_completion.txt
src/model/: engine.rs  ui.rs
src/model/engine/: mcp_tool.rs
src/model/ui/: display_text.rs
src/repo/: mcp_repo.rs
src/server/mcp/: server.rs
src/util/arrow/: json.rs
