[package]
name = "dataharpoon"
version = "0.1.0"
edition = "2024"

[dependencies]
datafusion = "47.0.0"
reedline = "0.40.0"
tokio = { version = "1.45.1", features = ["rt-multi-thread"] }
toml = "0.8.22"
serde = { version = "1.0.219", features = ["derive"] }
regex = "1.11.1"
rmcp = { version = "0.1.5", features = ["client", "transport-child-process"] }
futures = "0.3.31"
serde_json = "1.0.140"
